# PI-Django

./: .pdm-python  pyproject.toml
alunos/: models.py  serializers.py  views.py
alunos/migrations/: 0003_pessoa.py
config/: settings.py  urls.py
