[project]
name = "cadastro"
version = "0.1.0"
description = "cadastro"
authors = [
    {name = "gabrielmartinsgomes", email = "gabrielhenrickmartind3454@gmail.com"},
]
dependencies = ["django>=4.2.18"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
