[project]
name = "gbi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gabrielmartinsgomes", email = "gabrielhenrickmartind3454@gmail.com"},
    {name = "g", email = "g"},
]
dependencies = [
    "django>=4.2.19",
    "djangorestframework>=3.15.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
